# pipa

./: .gitignore  DOCS.md  README.md  main.py  pyproject.toml  test.py
.github/workflows/: test.yml
src/pip/: main.py
src/pipa/: __init__.py
tests/: test.py  test_package.py
