[project]
name = "pipa.py"
version = "0.1.0"
authors = [
  {name="stainlesteel", email="pd4500@protonmail.com"}
]
description = "Dead simple python wrapper for pip, the package installer for the Python Package Index."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: Unix",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/stainlesteel/pipa"
Issues = "https://github.com/stainlesteel/pipa/issues"

